2005-09-14  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_normal_arrow), (clearlooks_draw_combo_arrow),
	(_clearlooks_draw_arrow), (clearlooks_draw_arrow):
	* engines/clearlooks/src/clearlooks_style.c: (draw_shadow),
	(draw_box), (draw_arrow): Fixed arrow drawing.

2005-09-13  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_button), (clearlooks_draw_entry): Slightly more contrast.
	* engines/clearlooks/src/clearlooks_style.c: (draw_handle): Properly
	handle orientation.

2005-09-13  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_inset), (clearlooks_draw_button),
	(clearlooks_draw_entry), (clearlooks_draw_scale_trough),
	(clearlooks_draw_progressbar_trough):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_init_from_rc):
	* themes/Clearlooks/gtk-2.0/gtkrc:

	Fixed the shades calculations and did some polishing.

2005-09-12  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_normal_arrow), (clearlooks_draw_combo_arrow),
	(clearlooks_draw_arrow):
	* engines/clearlooks/src/clearlooks_draw.h:
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_set_widget_parameters), (draw_tab), (draw_arrow),
	(clearlooks_style_class_init):
	* engines/clearlooks/src/clearlooks_types.h: Draw pretty combo arrows.

2005-09-12  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c: (draw_option),
	(draw_check), (clearlooks_style_class_init): Draw pretty checkbox
	buttons, too!

2005-09-11  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c: (draw_box),
	(draw_option): Drawing pretty radio buttons!

2005-09-11  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c: