@@ -1,5 +1,10 @@
 2005-09-14  Richard A. Stellingwerff  <remenic@gmail.com>
 
+	* engines/clearlooks/src/clearlooks_style.c: (draw_option),
+	(draw_check): Disabled radio/check buttons are sooo pretty now!
+
+2005-09-14  Richard A. Stellingwerff  <remenic@gmail.com>
+
 	* engines/clearlooks/src/clearlooks_draw.c:
 	(clearlooks_draw_normal_arrow), (clearlooks_draw_combo_arrow),
 	(_clearlooks_draw_arrow), (clearlooks_draw_arrow):
